Addes Badges and fixed height overflow of badges

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -124,7 +124,7 @@
     flex-direction: column;
     justify-content: space-between;
     position: relative;
-    height: 5vw;
+    // height: 7vw;
 
     .footer__text {
         position: absolute;
